# qnn-sample

./: README.md
qnn-aot-run/: Build.sh  CMakeLists.txt  QnnLinearAOT.cpp  QnnLinearRun.cpp  QnnMatmulAOT.cpp  QnnMatmulRun.cpp  QnnSetup.cpp  QnnSetup.h  QnnSetupSmokeTest.cpp  QnnSharedBuffer.cpp  QnnSharedBuffer.h  QnnUtils.cpp  QnnUtils.h
